[tool.poetry]
name = "pod-sumarizer"
version = "0.1.0"
description = ""
authors = ["Thomas Wang <hi@xgwang.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
tiktoken = "^0.4.0"
python-dotenv = "^1.0.0"
langchain = "^0.0.223"
modal-client = "^0.50.2632"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
